<resources>
    <string name="app_name">HealthWatch</string>

    <string name="title_activity_care_taker">CareTakerActivity</string>

    <string name="title_activity_custom_icon_maps">Map</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="username">Username</string>
    <string name="sign_up_logo_image_desc">Sign Up Image Logo</string>
    <string name="login_logo_image_desc">Login Image Logo</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="create_account_option">No account yet? Create one</string>

    <string name="preference_file_key">com.cpen391.healthwatch.PREFERENCE_FILE_KEY</string>
    <string name="login_token">login.token</string>

    <string name="sign_up_user_type_option">Register as caretaker</string>
    <string name="caretaker_key">Caretaker Key</string>
    <string name="patient_image_desc">Patient Image Desc</string>

    <string name="title_activity_patient_meals">PatientMeals</string>


    <string name="title_activity_meal_plan">MealPlanActivity</string>
    <string name="healthwatch_bt_address">healthwatch.bt.address</string>

    <string name="dialog_use_bluetooth">Do you want to use bluetooth to pair with a HealthWatch device?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="select_healthwatch_device">Please select HealthWatch device to connect to</string>
    <string name="health_watch">HealthWatch2</string>

    <string name="default_bpm_message">BPM: None</string>
    <string name="patients_list_header">Patients</string>

    <string name="patient_meal_plan_edit_image_view_desc">PatientMealPlanEditImageViewDesc</string>
    <string name="action_done">Done</string>

    <string name="meal_edit_title">Meal Form</string>
    <string name="meal_name">Meal Name</string>

    <string name="meal_edit_footer_image_view_desc">MealEditFooterImageViewDesc</string>
    <string name="meal_edit_list_header">Meal Items</string>

    <string name="dialog_confirm_unsaved">Leave without submitting?</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>

    <string name="dialog_confirm_fields">Confirm submission?</string>
    <string name="mobile">Mobile</string>


    <string name="bpm_max">bpm.max</string>
    <string name="bpm_max_time">bpm.max.time</string>

    <string name="bpm_min">bpm.min</string>
    <string name="bpm_min_time">bpm.min.time</string>

    <string name="bpm_most_recent">bpm.most.recent</string>
    <string name="bpm_most_recent_time">bpm.most.recent.time</string>

    <string name="profile_phone_image_desc">CareTakerPhoneImageDesc</string>
    <string name="profile_heart_image_desc">ProfileHeartImageDesc</string>
    <string name="profile_caretaker_image_desc">ProfileCaretakerImageDesc</string>
    <string name="profile_location_image_desc">ProfileLocationImageDesc</string>
    <string name="profile_care_taker_label">caretaker</string>
    <string name="profile_bpm_max_default">Max: 0 BPM</string>
    <string name="profile_bpm_min_default">Min: 0 BPM</string>
    <string name="profile_bpm_label_default">not connected to healthwatch</string>
    <string name="profile_bpm_max_min_label_default">max/min within 1 hour</string>
    <string name="profile_location_default">Earth</string>
    <string name="profile_location_last_update_default">location services disabled</string>

    <string name="meal_list_header">Meals</string>

    <string name="single_meal_item_bullet_dot_image_desc">SingleMealItemBulletDotImageDesc</string>
    <string name="bpm_label">max/min bpm within 1 hour</string>
</resources>
