<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_profile_info_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/profile_info_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/profile_phone_image_desc"
            android:src="@drawable/ic_phone_black_36dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textColor="@color/gray"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_heart_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/profile_heart_image_desc"
            android:tint="@color/colorPrimary"
            android:src="@drawable/ic_favorite_black_36dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/profile_bpm_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_bpm_max_default"
                    android:layout_marginTop="16dp"
                    android:visibility="invisible"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_marginStart="16dp"
                    android:id="@+id/profile_bpm_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_bpm_min_default"
                    android:layout_marginTop="16dp"
                    android:visibility="invisible"
                    android:textSize="20sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/profile_bpm_max_min_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_bpm_max_min_label_default"
                android:textColor="@color/gray"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_caretaker_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:tint="@color/colorPrimaryDark"
            android:contentDescription="@string/profile_caretaker_image_desc"
            android:src="@drawable/ic_face_black_36dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_caretaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/profile_caretaker_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_care_taker_label"
                android:textColor="@color/gray"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/profile_location_image_desc"
            android:tint="@color/colorAccent"
            android:src="@drawable/ic_location_on_black_36dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_location_default"
                android:visibility="invisible"
                android:layout_marginTop="16dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/profile_location_last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_location_last_update_default"
                android:visibility="invisible"
                android:textColor="@color/gray"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


